--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,8 @@
     <div class="container">
       <div class="brand">
         <img src="assets/logo.png" alt="Bright Doro Logo" id="logo" onerror="this.style.display='none'"/>
-        <div>
+</section>
+ <div>
           <h1>Bright Doro</h1>
           <p class="subtitle">Agritech & AI Innovator — Founder, Agrictechventure68</p>
         </div>
@@ -151,6 +152,19 @@
       <p>© <span id="year"></span> Bright Doro — AgricTech Venture. Built for impact.</p>
     </div>
   </footer>
+<section id="bright-star-foods" class="p-6 bg-white rounded-2xl shadow-lg mt-10">
+  <img src="images/bright-star-food-concepts.jpg" alt="Bright Star Foods Concept" class="w-32 mb-4 rounded-full shadow-md">
+  <h2 class="text-2xl font-bold mb-4 text-green-700">Bright Star Food Concepts</h2>
+  <p class="text-gray-700 leading-relaxed mb-3">
+    <strong>Bright Star Food Concepts</strong> (BN [8684324]) is a legally registered food processing and agribusiness venture, evolving from the original <em>Bright Star Foods</em> initiative featured on <a href="https://thrivebizng.com/bright-star-foods" class="text-green-600 underline" target="_blank">ThriveBizNG</a>.
+  </p>
+  <p class="text-gray-700 leading-relaxed mb-3">
+    The journey began as part of a national business development training program, where we were showcased for our innovative approach to food value-chain enhancement. Today, Bright Star Food Concepts stands as a testament to persistence, innovation, and transformation—driving nutritious product development, agro-processing, and smart farming integration.
+  </p>
+  <p class="text-gray-700 italic">
+    *Formerly known as Bright Star Foods (as featured on ThriveBizNG).*
+  </p>
+</section>
 
   <script src="script.js"></script>
 </body>
